# autoidm-target-mssql

./: .gitignore  LICENSE.md  README.md  configexample.json  data  data2  data_comma_targetrunner.sh  data_commaindata  data_date  data_date.sh  data_multiplepk  data_nopk  data_nullpk  data_number  data_number.sh  data_reservedkeyword  data_reservedkeyword.sh  data_targetrunner.sh  data_unicodeandodd  data_unicoderunner.sh  delmerunner.sh  pyproject.toml  script.sh  target-mssql.sh
docs/: architecture.md
singer_sdk/: stream.py  target.py
target_mssql/: sink.py  streams.py  target.py
target_mssql/singer_sdk/: stream.py  target.py
target_mssql/tests/: test_core.py
